CSS fixes for bh.com header on small screens

--- a/webapp/sass/base/_structure.scss
+++ b/webapp/sass/base/_structure.scss
@@ -60,7 +60,6 @@ body {
     top: 0; bottom: 0; height: auto; // for battlehouse.com header
     position: absolute; // for battlehouse.com header
     width: 100%; // for battlehouse.com header
-    overflow: visible; // for battlehouse.com header
 }
 
 img {
