--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -1176,8 +1176,6 @@
 
     .channel__wrap {
         .row {
-            margin-right: 0 !important; // battlehouse.com
-            margin-left: 0 !important; // battlehouse.com
             &.header {
                 display: block;
             }
